Add support for ggo#project#NNNNN issues
These are hosted on gitlab.gnome.org

Web scraping without a personal access token cannot determine the status
(open/closed) of the ticket

--- a/bugfetcher.conf
+++ b/bugfetcher.conf
@@ -16,3 +16,8 @@ pass = bar
 # optional: oath application for rate limiting: https://github.com/settings/developers
 #client_id = abc
 #client_secret = 123
+
+[gitlab.gnome.org]
+# See https://gitlab.gnome.org/-/user_settings/personal_access_tokens
+# Grant: read_api
+#personal_access_token = ggopatXXXXXXXXXXXXXXXXXXXX
